# commitcraft

./: .editorconfig  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
prompts/: conventional.md
src/: actions.rs  backup.rs  collector.rs  diff_collector.rs  error.rs  executor.rs  generator.rs  guard.rs  instruction_builder.rs  instructions.rs  lib.rs  main.rs  message_generator.rs
src/actions/: config.rs  generate_message.rs
src/instructions/: conventional.rs  mod.rs  raw.rs
