[package]
name = "commitcraft"
version = "0.9.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
console = "0.15.8"
cross = "0.2.5"
indicatif = "0.17.8"
inquire = "0.7.4"
openai_dive = "0.4.6"
serde = "1.0.198"
serde_derive = "1.0.198"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.82"
