[package]
name = "commitcraft"
version = "0.9.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
console = "0.15.8"
cross = "0.2.5"
indicatif = "0.17.8"
inquire = "0.7.5"
openai_dive = "0.6.0"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.86"
